2010-02-19  Thomas Adam  <thomas@xteddy.org>
	* index.php:
	Update links for FvwmWiki and FvwmForums.

2009-09-20  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* authors/index.php:
	* news/index.php:
	* doc/unstable:
	* documentation/manpages/unstable:
	regenerated

	* definitions.inc:
	upated for 2.5.28 release

2009-03-14  Mikhael Goikhman  <migo@homemail.com>

	* documentation/dev_creating_rpms.php:
	update the list of optional packages, fix some links and wording

2009-02-23  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* definitions.inc:
	updated for 2.5.27 release

	* doc/manpages:
	regenerated man pages

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.27

2008-05-08  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* definitions.inc:
	really update to 2.5.26

2008-05-07  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* definitions.inc:
	updated for 2.5.26 release

	* doc/manpages:
	regenerated man pages

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.26

2008-03-03  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* definitions.inc:
	updated to point to 2.5.25

	* news/index.php:
	regenerated

2008-01-08  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* documentation/manpages/unstable:
	regenerated without duplicates

	* documentation/manpages/manpages2php:
	fix conv_link_target calls for all links
	don't include hidden files

	* doc/unstable:
	* documentation/manpages/unstable:
	regenerated

	* documentation/manpages/manpages2php:
	use docbook html body when available

	* doc/updatedoc:
	add script to update html documentation

	* doc/unstable:
	updated html documentation

2007-11-24  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* definitions.inc:
	updated for 2.5.24 release

	* doc/manpages:
	regenerated man pages

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.24
