@@ -1,0 +1,59 @@
+<?php
+//--------------------------------------------------------------------
+//-  File          : template.php_
+//-  Project       : FVWM Home Page
+//--------------------------------------------------------------------
+
+// Usage:
+// ls *jpg | grep -v small | sed 's+.jpg++;s+.*+sed "s/Thomas Adam/&/g" template.php_ > &.php+' | sh
+
+
+if (strlen($rel_path) == 0) $rel_path = "./../..";
+
+//--------------------------------------------------------------------
+// check if we should stop here
+//--------------------------------------------------------------------
+if (strlen("$navigation_check") > 0) return;
+
+//--------------------------------------------------------------------
+// load some global definitions
+//--------------------------------------------------------------------
+include_once("$rel_path/definitions.inc");
+
+//--------------------------------------------------------------------
+// Site definitions
+//--------------------------------------------------------------------
+$title          = "Thomas Adam";
+$heading        = "Thomas Adam";
+$link_name      = "Thomas Adam";
+$link_picture   = "pictures/icons/home";
+$parent_site    = "top";
+$child_sites    = array();
+$requested_file = basename(my_get_global("PHP_SELF", "SERVER"));
+$this_site      = "authors";
+
+//--------------------------------------------------------------------
+// check if we should stop here
+//--------------------------------------------------------------------
+if (strlen("$navigation_check") > 0) return;
+
+//--------------------------------------------------------------------
+// load the layout file
+//--------------------------------------------------------------------
+if (strlen("$site_has_been_loaded") == 0) {
+  $site_has_been_loaded = "true";
+  include_once(sec_filename($layout_file));
+  exit();
+}
+
+decoration_window_start("Thomas Adam"); 
+?>
+
+<a href="<?php echo conv_link_target('./index.php'); ?>">Back to image overview.</a><br>
+<img src="Thomas_Adam.jpg" border="0" hspace="10" vspace="10"><br>
+
+<a href="http://www.xteddy,org">Personal Website</a>
+
+<?php 
+decoration_window_end(); 
+?> 
