@@ -1,3 +1,11 @@
+2010-02-20  Thomas Adam  <thomas@xteddy.org>
+	* authors/pictures/create_php.sh:
+	* authors/pictures/index.php:
+	* authors/pictures/Thomas_Adam.php:
+	* authors/pictures/Thomas_Adam.jpg:
+	* authors/pictures/Thomas_Adam_small.jpg:
+	Add in a shameful photo of myself with a caught mackerel from 2009.
+
 2010-02-19  Thomas Adam  <thomas@xteddy.org>
 	* index.php:
 	Update links for FvwmWiki and FvwmForums.
